--- a/Seq.PushGatewayTransmitter/Seq.PushGatewayTransmitter.nuspec
+++ b/Seq.PushGatewayTransmitter/Seq.PushGatewayTransmitter.nuspec
@@ -1,19 +1,19 @@
 <?xml version="1.0"?>
 <package >
   <metadata>
-    <id>Seq.PushGatewayTransmitter</id>
-    <version>1.0.15</version>
-    <title>Seq.PushGatewayTransmitter</title>
+    <id>Seq.PushGatewayTransmitterNew</id>
+    <version>1.0.0</version>
+    <title>Seq.PushGatewayTransmitterNew</title>
     <authors>Domma</authors>
     <owners>Domma</owners>
     <licenseUrl>https://github.com/amitxagarwal/Seq.PushGatewayTransmitter/blob/master/LICENSE.txt</licenseUrl>
     <projectUrl>https://github.com/amitxagarwal/Seq.PushGatewayTransmitter/blob/master</projectUrl>
     <iconUrl>https://github.com/amitxagarwal/Seq.PushGatewayTransmitter/blob/master/icon</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Seq.PushGatewayTransmitter</description>
+    <description>Seq.PushGatewayTransmitterNew</description>
     <releaseNotes>Pushing it for the first timw</releaseNotes>
     <copyright>Copyright 2019</copyright>
-    <tags>DommaSeq.PushGatewayTransmitter </tags>
+    <tags>DommaSeq.PushGatewayTransmitterNew </tags>
   </metadata>
   <files>
 <file src="bin\Debug\Prometheus.Client.MetricPusher.dll" target="lib\net45" />
